ajout de projets

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
     <div class="container">
       <div class="grid">
         <div class="hero__item left">
-          <span>Votre Futur Apprenti !</span>
+          <span>Apprenti Data Scientist</span>
           <h1 class="title">Hello, Je suis Taha SEFOUDINE de Paris</h1>
           <p>Bienvenue sur mon portfolio ! </p>
         </div>
@@ -96,8 +96,8 @@
         <div class="grid__item">
           <h2 class="section-title">A propos</h2>
           <h3>Qui suis-je</h3>
-          <p>Étudiant en deuxième année de BUT Informatique à l'Université Gustave Eiffel</strong>, actuellement
-            en recherche active d'une alternance pour septembre 2023 !
+          <p>Étudiant en deuxième année de BUT Informatique à l'Université Gustave Eiffel.</strong> Actuellement
+            Apprenti Data Scientist au sein du Ministère de L'Économie et des Finances - DSCI.
           </p>
           <strong><p>Expérience : 1 an <br>
           Parcours choisi : réalisation d'applications</strong>
@@ -223,6 +223,18 @@
             <p>Catégorie: Programmation en JAVA</p>
             <a href="projet4-details.html">En savoir plus</a>
           </div>
+          <div class="project">
+            <h3>Configuration d'un serveur HTTPS</h3>
+            <img class="img-square" src="./img/projet5.png" alt="Projet 5">
+            <p>Catégorie: Réseau</p>
+            <a href="projet5-details.html">En savoir plus</a>
+          </div>
+          <div class="project">
+            <h3>Gestionnaire de tâches</h3>
+            <img class="img-square" src="./img/projet6.png" alt="Projet 6">
+            <p>Catégorie: Application Flask (Python, SQL)</p>
+            <a href="projet6-details.html">En savoir plus</a>
+          </div>
         </div>
       </div>
     </section>
@@ -233,7 +245,7 @@
       <div class="container">
         <div class="section-header">
           <h2 class="section-title">Contact</h2>
-          <p>Envoyez-moi un mail dès maintenant pour explorer ensemble les opportunités qui pourraient se présenter à nous.</p>
+          <p>Envoyez-moi un mail dès maintenant pour qu'on puisse travailler ensemble.</p>
         </div>
     
         <form target="_blank" action="https://formsubmit.co/tahathierry130@gmail.com" method="POST">
