--- a/index.html
+++ b/index.html
@@ -105,6 +105,8 @@
           <ul>
             <li>En un mot : Efficace</li>
           </ul>
+          <img width="560" height="453" src="./img/timeline.jpg" alt="Timeline">
+
         </div>
       </div>
     </div>
