--- a/projet6-details.html
+++ b/projet6-details.html
@@ -81,6 +81,10 @@
     <li>SQLite</li>
 </ul>
 
+<h2>Téléchargement du projet</h2>
+<p>Vous pouvez télécharger le projet complet en cliquant sur le lien ci-dessous :</p>
+<p><a href="projet6.zip" download>Télécharger le projet</a></p>
+
 <div class="center">
     <a href="index.html">Retour à l'accueil</a>
 </div>
