--- a/index.html
+++ b/index.html
@@ -200,8 +200,7 @@
           <h2 class="section-title">Projets</h2>
 
           <p>Je vous invite à découvrir mes projets soigneusement sélectionnés qui reflètent mon travail et ma créativité, 
-            en plus des autres projets que je partage sur <a href="https://github.com/Taha-130">GitHub</a>
-            .
+            en plus des autres projets que je partage sur <a href="https://github.com/Taha-130">GitHub</a>.
           </p>
         </div>
         <div class="grid">
