--- a/projet6-details.html
+++ b/projet6-details.html
@@ -7,58 +7,11 @@
     <link rel="shortcut icon" href="./img/favicon.ico?v=1" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/global.css">
+    <link rel="stylesheet" href="./css/projet.css">
+
 
     <title>Action List Application - Gestion de listes d'actions</title>
-    <style>
-        body {
-            font-family: 'Poppins', sans-serif;
-            margin: 0;
-            padding: 20px;
-            background-color: #f4f4f4;
-        }
 
-        h1 {
-            font-size: 32px;
-            font-weight: 700;
-            margin-bottom: 20px;
-            text-align: center;
-        }
-
-        h2 {
-            font-size: 24px;
-            font-weight: 500;
-            margin-top: 40px;
-            margin-bottom: 20px;
-        }
-
-        p {
-            font-size: 16px;
-            line-height: 1.5;
-            margin-bottom: 10px;
-        }
-
-        ul {
-            font-size: 16px;
-            line-height: 1.5;
-            margin-bottom: 10px;
-            padding-left: 20px;
-        }
-
-        img {
-            display: block;
-            max-width: 100%;
-            margin: 20px auto;
-        }
-
-        a {
-            color: #007bff;
-            text-decoration: none;
-        }
-
-        .center {
-            text-align: center;
-        }
-    </style>
 </head>
 <body>
 <h1>Action List Application - Gestion de listes d'actions</h1>
