--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         </div>
         <div class="grid__item">
           <h2 class="section-title">A propos</h2>
-          <h3>Qui suis-je</h3>
+          <h3>Qui suis-je ?</h3>
           <p>Étudiant en deuxième année de BUT Informatique à l'Université Gustave Eiffel.</strong> Actuellement
             Apprenti Data Scientist au sein du Ministère de L'Économie et des Finances - DSCI.
           </p>
