--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
       </div>
       <div class="grid">
         <div class="grid__item">
-          <h3>Mes domaines de compétences</h3>
+          <h3>Mes domaines d'apprentissage</h3>
           <ul class="list-unstyled">
             <li>
               <h4>Réaliser un développement d'application</h4>
@@ -132,40 +132,40 @@
         <div class="grid__item">
           <h3>Compétences en développement</h3>
           <div class="progressbar">
-            <div class="bar" data-width="80">HTML</div>
+            <div class="bar" data-width="80">HTML <span class="percentage">80%</span></div>
           </div>
           <div class="progressbar">
-            <div class="bar" data-width="80">CSS</div>
+            <div class="bar" data-width="80">CSS <span class="percentage">80%</span></div>
           </div>
           <div class="progressbar">
-            <div class="bar" data-width="50">JAVASCRIPT</div>
+            <div class="bar" data-width="50">JAVASCRIPT <span class="percentage">50%</span></div>
           </div>
           <div class="progressbar">
-            <div class="bar" data-width="70">PHP</div>
+            <div class="bar" data-width="70">PHP <span class="percentage">70%</span></div>
           </div>
           <div class="progressbar">
-            <div class="bar" data-width="85">PYTHON</div>
+            <div class="bar" data-width="85">PYTHON <span class="percentage">85%</span></div>
           </div>
           <div class="progressbar">
-            <div class="bar" data-width="85">JAVA</div>
+            <div class="bar" data-width="65">JAVA <span class="percentage">65%</span></div>
           </div>
           <div class="progressbar">
-            <div class="bar" data-width="70">C</div>
+            <div class="bar" data-width="50">C <span class="percentage">50%</span></div>
           </div>
           <h3>Compétences en conception graphique</h3>
           <div class="progressbar">
-            <div class="bar" data-width="90">FIGMA</div>
+            <div class="bar" data-width="40">FIGMA <span class="percentage">40%</span></div>
           </div>
           <h3>FRAMEWORKS</h3>
           <div class="progressbar">
-            <div class="bar" data-width="60">Laravel</div>
+            <div class="bar" data-width="60">Laravel <span class="percentage">60%</span></div>
           </div>
           <h3>Mes Outils de développement</h3>
             <div class="progressbar">
-              <div class="bar" data-width="90">Visual Studio Code</div>
+              <div class="bar" data-width="80">Visual Studio Code <span class="percentage">80%</span></div>
             </div>
             <div class="progressbar">
-              <div class="bar" data-width="90">Github</div>
+              <div class="bar" data-width="80">Github <span class="percentage">80%</span></div>
             </div>
           </div>
         </div>
