--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="./css/global.css">
+  <link rel="stylesheet" href="./css/arrow.css">
   <script src="./js/global.js" defer></script>
 
 </head>
 
-<body>
+<body>  
 
-  <!-- ceci est un commentaire -->
 
   <header class="header">
     <div class="container d-flex">
@@ -95,37 +95,51 @@
     <div class="container">
       <div class="section-header">
         <h2 class="section-title">Mes compétences</h2>
+
+
         <p>Découvrez mes compétences polyvalentes et ma 
           connaissance dans divers domaines, pour 
           des résultats créatifs et précis.</p>
       </div>
+
+
+    <div class="arrow-container">
+      <div class="arrow-tail"></div>
+      <div class="arrow-segment realiser">Réaliser</div>
+      <div class="arrow-segment optimiser">Optimiser</div>
+      <div class="arrow-segment administrer">Administrer</div>
+      <div class="arrow-segment gerer">Gérer</div>
+      <div class="arrow-segment conduire">Conduire</div>
+      <div class="arrow-segment collaborer">Collaborer</div>
+    </div>
+      
       <div class="grid">
         <div class="grid__item">
           <h3>Mes domaines d'apprentissage</h3>
           <ul class="list-unstyled">
             <li>
-              <h4>Réaliser un développement d'application</h4>
-              <p>Concevoir et programmer des applications informatiques.</p>
+              <h4>Management des Systèmes d'Information (SI)</h4>
+              <p>Analyse et gestion stratégique des ressources informatiques au sein d'une organisation pour optimiser les processus d'affaires, l'innovation et la prise de décision.</p>
             </li>
             <li>
-              <h4>Optimiser des applications informatiques</h4>
-              <p>Améliorer les performances et l'efficacité des applications existantes.</p>
+              <h4>Méthodes d'Optimisation</h4>
+              <p>Application de techniques mathématiques et algorithmiques pour trouver la meilleure solution possible à un problème donné, dans des contextes tels que la planification des ressources ou la réduction des coûts.</p>
             </li>
             <li>
-              <h4>Administrer des systèmes informatiques communicants complexes</h4>
-              <p>Gérer et sécuriser des systèmes informatiques tels que des réseaux et des serveurs.</p>
+              <h4>Architecture Réseaux</h4>
+              <p>Conception et gestion de l'infrastructure réseau, y compris les aspects de performance et de sécurité.</p>
             </li>
             <li>
-              <h4>Gérer des données de l'information</h4>
-              <p>Collecter, stocker, manipuler et analyser des données informatiques.</p>
+              <h4>Design Patterns</h4>
+              <p>Étude de solutions réutilisables à des problèmes courants de conception logicielle, facilitant le développement d'applications robustes et maintenables.</p>
             </li>
             <li>
-              <h4>Conduire un projet</h4>
-              <p>Planifier, organiser et coordonner des projets informatiques.</p>
+              <h4>Bases de Données</h4>
+              <p>Conception, mise en œuvre et gestion de bases de données pour stocker, récupérer et manipuler des données de manière efficace et sécurisée.</p>
             </li>
             <li>
-              <h4>Travailler dans une équipe informatique</h4>
-              <p>Collaborer efficacement au sein d'une équipe en communiquant de manière claire pour atteindre les objectifs communs.</p>
+              <h4>Développement Mobile</h4>
+              <p>Conception et développement d'applications pour appareils mobiles, en se concentrant sur l'expérience utilisateur, les performances et l'intégration avec les services en ligne.</p>
             </li>
           </ul>
         </div>
@@ -172,6 +186,7 @@
       </div>
     </div>
 
+    
     <section id="portfolio" class="portfolio">
       <div class="container">
         <div class="section-header">
