--- a/collaborer_details.html
+++ b/collaborer_details.html
@@ -40,13 +40,13 @@
     <!-- AC26.01: Compréhension de la diversité et de la structure de l'information -->
     <section id="diversite-information">
         <h2>AC26.01 - Diversité et Structure de l'Information</h2>
-        <p>L'équipe a intégré une variété de sources de données pour développer un système de scoring sophistiqué, répondant aux attentes des joueurs tout en saisissant la dynamique de l'information spécifique au secteur des jeux.</p>
+        <p>L'équipe a intégré une variété de sources de données pour développer un système de scoring sophistiqué, répondant aux attentes des joueurs.</p>
     </section>
 
     <!-- AC26.02: Intégration d'une équipe informatique dans une organisation -->
     <section id="integration-equipe">
         <h2>AC26.02 - Intégration au sein d'une Organisation</h2>
-        <p>La mise en place du moteur de chaînes de mots illustre notre approche méthodique pour incorporer des compétences techniques au sein d'une organisation, reflétant la synergie entre l'équipe et la structure globale.</p>
+        <p>La mise en place du moteur de chaînes de mots illustre notre approche méthodique pour incorporer des compétences techniques au sein d'une organisation, reflétant la synergie entre l'équipe.</p>
     </section>
 
     <!-- AC26.03: Mobilisation des compétences interpersonnelles -->
@@ -58,7 +58,7 @@
     <!-- AC26.04: Rendre compte de l'activité professionnelle -->
     <section id="activite-professionnelle">
         <h2>AC26.04 - Compte Rendu d'Activité</h2>
-        <p>L'interface web du jeu, à la fois simple et intuitive, témoigne de l'engagement professionnel de l'équipe et de leur habileté à transformer des fonctionnalités complexes en une application utilisateur finalisée.</p>
+        <p>Pour chaque semestre, un compte rendu structuré en trois niveaux a été élaboré, reflétant l'engagement professionnel de l'équipe et leur compétence à simplifier des fonctionnalités complexes dans un document compréhensible par tous.</p>
     </section>
 
     <!-- Synthèse et conclusion -->
