--- a/conduire_details.html
+++ b/conduire_details.html
@@ -14,23 +14,22 @@
 <body>
     <!-- Introduction au projet Controverses -->
     <div class="center">
-        <h2>Description:</h2>
-    <header>
-    <header>
-        <h1>Projet “Controverses”</h1>
-        <p>Ce projet vise à engager une discussion approfondie sur les implications éthiques et financières de la vente de données personnelles par les entreprises.</p>
-    </header>
+        <header>
+            <h1>Projet de Gestion de Paiement - Banque</h1>
+            <h2>Description:</h2>
+            <p>Projet développé en équipe sur Laravel, utilisant la méthode Scrum pour optimiser la gestion des paiements au sein d'une banque.</p>
+        </header>
 
     <main>
         <div class="slider-container">
           <div class="slide">
-            <img src="img/controverses1.png" alt="Capture d'écran du projet 1">
+            <img src="img/paiement1.png" alt="Capture d'écran du projet 1">
           </div>
           <div class="slide">
-            <img src="img/controverses2.png" alt="Capture d'écran du projet 2">
+            <img src="img/paiement2.png" alt="Capture d'écran du projet 2">
           </div>
           <div class="slide">
-            <img src="img/controverses3.png" alt="Capture d'écran du projet 3">
+            <img src="img/paiement3.png" alt="Capture d'écran du projet 3">
           </div>
     
           <button class="prev" onclick="plusSlides(-1)">❮</button>
@@ -38,42 +37,35 @@
         </div>
       </main>
 
-    <!-- AC25.01: Identifier les processus pour améliorer les systèmes d'information -->
-    <section id="processus-amelioration">
-        <h2>AC25.01 - Amélioration des Systèmes d'Information</h2>
-        <p>Identification des processus internes de l'organisation pour évaluer les avantages et les risques de la vente de données personnelles, permettant une meilleure compréhension et optimisation des systèmes d'information en place.</p>
+
+
+    <!-- AC25.01: Processus organisationnels -->
+    <section id="processus-organisationnels">
+        <h2>AC25.01 - Optimisation des Systèmes d'Information</h2>
+        <p>Nous avons identifié et analysé les processus de paiement de la banque pour intégrer notre système de gestion de paiement, ce qui a permis d'améliorer la fluidité et l'efficacité des transactions.</p>
     </section>
 
-    <!-- AC25.02: Formaliser les besoins du client et de l'utilisateur -->
-    <section id="besoins-client-utilisateur">
+    <!-- AC25.02: Besoins du client et de l'utilisateur -->
+    <section id="besoins-clients">
         <h2>AC25.02 - Formalisation des Besoins</h2>
-        <p>Analyse détaillée des attentes et préoccupations des parties prenantes en matière de vente de données pour créer des stratégies de communication efficaces et appropriées.</p>
+        <p>Une compréhension détaillée des besoins des utilisateurs de la banque a été établie pour développer des fonctionnalités sur mesure qui répondent précisément aux attentes des clients en matière de gestion de paiement.</p>
     </section>
 
-    <!-- AC25.03: Identifier la faisabilité du projet informatique -->
+    <!-- AC25.03: Faisabilité du projet informatique -->
     <section id="faisabilite-projet">
         <h2>AC25.03 - Critères de Faisabilité du Projet</h2>
-        <p>Évaluation de la faisabilité du projet en tenant compte des contraintes légales, techniques et sociales, déterminant les conditions éthiques de réalisation du projet.</p>
+        <p>L'évaluation de la faisabilité technique et de la conformité réglementaire a été réalisée pour assurer que le système de paiement développé sur Laravel est sécurisé, performant et conforme aux standards bancaires.</p>
     </section>
 
-    <!-- AC25.04: Définir et gérer le cycle de vie du projet -->
+    <!-- AC25.04: Gestion de vie de projet -->
     <section id="gestion-projet">
-        <h2>AC25.04 - Gestion de la Vie du Projet</h2>
-        <p>Conception d'un cadre de gestion de projet pour assurer une approche éthique à chaque étape, en prenant en compte les répercussions de la vente de données personnelles.</p>
-    </section>
-
-    <!-- Récapitulatif des compétences de communication développées -->
-    <section id="competences-communication">
-        <h2>Compétences Développées en Communication</h2>
-        <p>En tant que chef de projet, les compétences acquises pendant ce cours ont été appliquées pour mener le projet, en conciliant les aspects techniques, légaux et éthiques pour un débat constructif sur les enjeux contemporains.</p>
+        <h2>AC25.04 - Gestion de Vie de Projet</h2>
+        <p>La méthode Scrum a permis de structurer le développement du projet de paiement de manière itérative, avec des sprints réguliers pour évaluer l'avancement et ajuster les priorités en fonction des retours des parties prenantes.</p>
     </section>
 
     </div>
     <br>
-    <div class="center">
-    <p>Vous pouvez obtenir le présentation complète en allant sur mon GitHub :</p>
-    <p><a href="https://github.com/Taha-130/controverses">Voir le projet</a></p>
-    </div>
+
 
     <br><br>
 
