--- a/gerer_details.html
+++ b/gerer_details.html
@@ -65,6 +65,7 @@
   <br>
 
   <div class="center">
+    <p>J'ai eu l'opportunité de contribuer à ce projet, et bien que je sois autorisé à en discuter, il ne m'appartient pas ; par conséquent, le projet complet n'est pas disponible sur mon GitHub.</p>
     <a href="index.html">Retour à l'accueil</a>
   </div>
 </body>
