--- a/realiser_details.html
+++ b/realiser_details.html
@@ -46,7 +46,7 @@
     <!-- AC21.02: Apply Accessibility and Ergonomics Principles -->
     <section id="AC21-02">
         <h2>AC21.02 | Appliquer des principes d'accessibilité et d'ergonomie</h2>
-        <p>L'accessibilité est au cœur de notre conception, permettant un accès prioritaire aux éléments interactifs pour les utilisateurs de tous les dispositifs. L'ergonomie est soigneusement étudiée pour offrir une disposition intuitive et confortable.</p>
+        <p>L'accessibilité est au cœur de la conception, l'ergonomie est soigneusement étudiée pour offrir une disposition intuitive et confortable.</p>
     </section>
 
     <!-- AC21.03: Adopt Good Practices in Design and Programming -->
@@ -64,7 +64,7 @@
     </div>
     <br>
     <div class="center">
-    <p>Vous pouvez obtenir le projet complet en cliquant sur mon GitHub :</p>
+    <p>Vous pouvez obtenir le projet complet en allant sur mon GitHub :</p>
     <p><a href="https://github.com/Taha-130/Google_search">Voir le projet</a></p>
     </div>
 
