--- a/index.html
+++ b/index.html
@@ -127,6 +127,7 @@
     <div class="project-card">
       <h3 class="project-title">Projet Search (CS50)</h3>
       <a href="realiser_details.html"><img src="img/search.jpg" alt="Image Projet Réaliser 1"></a>
+      <span>Concevoir et développer des applications communicantes</span>
     </div>
     <!-- Ajoutez d'autres project-card pour d'autres projets sous 'Réaliser' -->
     <button class="prev" onclick="navigateSlider('realiser', -1)">❮</button>
@@ -137,6 +138,7 @@
     <div class="project-card">
       <h3 class="project-title">TP Automates</h3>
       <a href="optimiser_details.html"><img src="img/automates.png" alt="Image Projet Optimiser 1"></a>
+      <p>Proposer des applications informatiques optimisées en fonction de critères spécifiques</p>
     </div>
     <!-- Ajoutez d'autres project-card pour d'autres projets sous 'Optimiser' -->
     <button class="prev" onclick="navigateSlider('optimiser', -1)">❮</button>
@@ -147,6 +149,7 @@
     <div class="project-card">
       <h3 class="project-title"> TP virtualisation </h3>
       <a href="administrer_details.html"><img src="img/virtualisation.jpg" alt="Image TP virtualisation"></a>
+      <p>Installer, configurer, mettre à disposition des services et des réseaux</p>
     </div>
     <!-- Ajoutez d'autres project-card pour d'autres projets sous 'Administrer' -->
     <button class="prev" onclick="navigateSlider('administrer', -1)">❮</button>
@@ -157,6 +160,7 @@
     <div class="project-card">
       <h3 class="project-title">Projet Bercy Vert</h3>
       <a href="gerer_details.html"><img src="img/bercy.png" alt="Image Projet Bercy Vert"></a>
+      <p>Exploiter les données de l'entreprise et mettre à disposition toutes les informations pour un bon pilotage de l'entreprise</p>
     </div>
     <!-- Ajoutez d'autres project-card pour d'autres projets sous 'Gérer' -->
     <button class="prev" onclick="navigateSlider('gerer', -1)">❮</button>
@@ -165,8 +169,9 @@
   
   <div class="slider-container" id="conduireSlider">
     <div class="project-card">
-      <h3 class="project-title">Projet Controverses</h3>
-      <a href="conduire_details.html"><img src="img/controverses.png" alt="Image Projet Controverses"></a>
+      <h3 class="project-title">Projet de gestion de paiement d'une banque</h3>
+      <a href="conduire_details.html"><img src="img/paiement.png" alt="Image Projet Banque"></a>
+      <p>Satisfaire les besoins des utilisateurs et piloter un projet informatique avec des méthodes agiles</p>
     </div>
     <!-- Ajoutez d'autres project-card pour d'autres projets sous 'Conduire' -->
     <button class="prev" onclick="navigateSlider('conduire', -1)">❮</button>
@@ -177,6 +182,7 @@
     <div class="project-card">
       <h3 class="project-title">Projet SAE Wordschain</h3>
       <a href="collaborer_details.html"><img src="img/wordschain.png" alt="Image SAE Wordschain "></a>
+      <p>Acquérir, développer et exploiter les aptitudes nécessaires pour travailler efficacement dans une équipe informatique</p>
     </div>
     <!-- Ajoutez d'autres project-card pour d'autres projets sous 'Collaborer' -->
     <button class="prev" onclick="navigateSlider('collaborer', -1)">❮</button>
