ajout projet réaliser

--- a/collaborer_details.html
+++ b/collaborer_details.html
@@ -36,6 +36,8 @@
           <button class="next" onclick="plusSlides(1)">❯</button>
         </div>
       </main>
+      
+    <h2>Axes de Compétence</h2>
 
     <!-- AC26.01: Compréhension de la diversité et de la structure de l'information -->
     <section id="diversite-information">
