--- a/gerer_details.html
+++ b/gerer_details.html
@@ -35,6 +35,8 @@
         <button class="next" onclick="plusSlides(1)">❯</button>
       </div>
 
+      <h2>Axes de Compétence</h2>
+
       <section id="cea-01">
         <h3>CEA.01 - Conception, gestion, administration et exploitation des données de l'entreprise :</h3>
         <p>L'élaboration d'une infrastructure de données robuste a permis une exploitation efficace et une gestion proactive pour soutenir les visualisations et les analyses environnementales.</p>
