--- a/index.html
+++ b/index.html
@@ -87,9 +87,9 @@
           <strong><p>Expérience : 1 an <br>
           Parcours choisi : réalisation d'applications</strong>
           </p>
-          <ul>
-            <li>En un mot : Efficace</li>
-          </ul>
+          <h3>Loisirs</h3>
+          <p>Pratique du Judo et de la pétanque</p>
+          <p>Écoute de podcasts : GDIY, The Diary Of A CEO</p>
           <img width="560" height="453" src="./img/timeline.png" alt="Timeline">
 
         </div>
@@ -127,6 +127,12 @@
     <div class="project-card">
       <h3 class="project-title">Projet Search (CS50)</h3>
       <a href="realiser_details.html"><img src="img/search.jpg" alt="Image Projet Réaliser 1"></a>
+      <span>Concevoir et développer des applications communicantes</span>
+    </div>
+
+    <div class="project-card">
+      <h3 class="project-title">Projet Batailles de Boules</h3>
+      <a href="projet1-details.html"><img src="img/projet1.jpg" alt="Image Projet Réaliser 1"></a>
       <span>Concevoir et développer des applications communicantes</span>
     </div>
     <!-- Ajoutez d'autres project-card pour d'autres projets sous 'Réaliser' -->
