--- a/optimiser_details.html
+++ b/optimiser_details.html
@@ -42,6 +42,7 @@
           </div>
         </main>
 
+  <h2>Axes de Compétence</h2>
 
   <section id="ac22-01">
     <h2>AC22.01 | Choix de structures de données complexes</h2>
