--- a/realiser_details.html
+++ b/realiser_details.html
@@ -36,6 +36,9 @@
         </div>
       </main>
 
+      <h2>Axes de Compétence</h2>
+
+
     <!-- AC21.01: Functional and Non-Functional Specifications from Requirements -->
     <section id="AC21-01">
         <h2>AC21.01 | Élaborer et implémenter les spécifications fonctionnelles et non fonctionnelles à partir des exigences</h2>
