--- a/projet1-details.html
+++ b/projet1-details.html
@@ -8,36 +8,50 @@
   <link rel="shortcut icon" href="./img/favicon.ico?v=1" type="image/x-icon">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="./css/projet.css">
-
+  <link rel="stylesheet" href="./css/project_slider.css">
+  <link rel="shortcut icon" href="./img/favicon.ico?v=1" type="image/x-icon">
+  <script src="./js/project_slider.js" defer></script>
 </head>
 <body>
   <h1>Batailles de boules</h1>
+  <div class="center">
   
   <h2>Description</h2>
   <p>Le projet Batailles de boules a été réalisé en binôme dans le cadre du BUT Informatique au cours du premier semestre. C'est un jeu qui consiste à faire interagir des boules de différentes couleurs afin d'occuper la plus grande surface. Le jeu se joue à deux joueurs et chaque joueur a un temps limité pour placer sa boule. Le joueur a deux choix : occuper une surface non occupée ou diviser la boule de l'adversaire pour libérer de la surface et gagner.</p>
   
+  <h2>Axes de Compétence</h2>
+  <h3>AC21.01 | Élaborer et implémenter les spécifications</h3>
+  <p>Nous avons démarré par établir des spécifications claires pour le jeu, en nous basant sur les exigences de gameplay et d'interface utilisateur, afin de développer un moteur de jeu performant et des règles compréhensibles.</p>
+  
+  <h3>AC21.02 | Appliquer des principes d'accessibilité et d'ergonomie</h3>
+  <p>L'ergonomie et l'accessibilité ont été des priorités dans la conception de l'interface, permettant une expérience de jeu intuitive et accessible à tous les utilisateurs.</p>
+  
+  <h3>AC21.03 | Adopter de bonnes pratiques de conception et de programmation</h3>
+  <p>Les bonnes pratiques ont été respectées tout au long du développement, avec une attention particulière sur la lisibilité du code, l'utilisation de commentaires et l'optimisation des performances.</p>
+  
+  <h3>AC21.04 | Vérifier et valider la qualité de l'application</h3>
+  <p>Des tests ont été réalisés régulièrement pour assurer la qualité et la stabilité du jeu, validant ainsi chaque fonctionnalité et garantissant une expérience utilisateur sans faille.</p>
+  
   <h2>Fonctionnalités</h2>
-  <ul>
-    <li>Placer une boule</li>
-    <li>Diviser une boule adverse</li>
-    <li>Repérer la surface occupée</li>
-    <li>Timer pour le tour de chaque joueur</li>
-    <li>Calcul du score en fonction de la surface occupée</li>
-  </ul>
+  <p>Placer une boule</p>
+  <p>Diviser une boule adverse</p>
+  <p>Repérer la surface occupée</p>
+  <P>Timer pour le tour de chaque joueur</P>
+  <p>Calcul du score en fonction de la surface occupée</p>
+
   
   
   <h2>Technologies utilisées</h2>
-  <ul>
-    <li>Python</li>
-  </ul>
+  <p>Python</p>
 
   <h2>Téléchargement du projet</h2>
-  <p>Vous pouvez télécharger le projet complet en cliquant sur le lien ci-dessous :</p>
-  <p><a href="projet1.zip" download>Télécharger le projet</a></p>
+  <p>Vous pouvez obtenir le projet complet en cliquant sur mon GitHub :</p>
+  <p><a href="https://github.com/Taha-130/Jeu-Video-SA-Python">Voir le projet</a></p>
+  
   <h2>Conclusion</h2>
-  <p>Le projet Batailles de boules, réalisé dans le cadre du BUT Informatique, a mis en avant nos compétences en algorithmique, programmation, conception d'interfaces, gestion du temps, logique de jeu et analyse des problèmes. Les fonctionnalités implémentées ont démontré notre capacité à concevoir un jeu interactif complet. Cette expérience a renforcé nos compétences en informatique et démontré notre capacité à relever des défis techniques tout en créant une expérience de jeu divertissante.</p>
+  <p>Le projet Batailles de boules, réalisé dans le cadre du BUT Informatique, a mis en avant nos compétences en algorithmique, programmation, conception d'interfaces, gestion du temps, logique de jeu et analyse des problèmes. Les fonctionnalités implémentées ont démontré notre capacité à concevoir un jeu interactif complet.</p>
+
+
   <div class="center">
     <a href="index.html">Retour à l'accueil</a>
   </div>
-  </body>
-  </html>
