--- a/projet1-details.html
+++ b/projet1-details.html
@@ -30,7 +30,7 @@
   <p>Les bonnes pratiques ont été respectées tout au long du développement, avec une attention particulière sur la lisibilité du code, l'utilisation de commentaires et l'optimisation des performances.</p>
   
   <h3>AC21.04 | Vérifier et valider la qualité de l'application</h3>
-  <p>Des tests ont été réalisés régulièrement pour assurer la qualité et la stabilité du jeu, validant ainsi chaque fonctionnalité et garantissant une expérience utilisateur sans faille.</p>
+  <p>Des tests ont été réalisés régulièrement pour assurer la qualité et la stabilité du jeu, validant ainsi chaque fonctionnalité et garantissant une bonne expérience  utilisateur.</p>
   
   <h2>Fonctionnalités</h2>
   <p>Placer une boule</p>
