--- a/administrer_details.html
+++ b/administrer_details.html
@@ -19,7 +19,7 @@
 
     <div class="center">
         <h2>Description:</h2>
-      <p>Dans les TP de virtualisation en deuxième année de BUT, divers enseignements clés clés ont été développées qui correspondent directement aux axes de la compétence "Administrer" :</p>
+      <p>Dans les TP de virtualisation en deuxième année de BUT, divers enseignements clés ont été développées qui correspondent directement aux axes de la compétence "Administrer" :</p>
 
       <div class="slider-container">
         <div class="slide">
