--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
   
   <div class="slider-container" id="optimiserSlider">
     <div class="project-card">
-      <h3 class="project-title">TP Automates</h3>
+      <h3 class="project-title">Automates</h3>
       <a href="optimiser_details.html"><img src="img/automates.png" alt="Image Projet Optimiser 1"></a>
       <p>Proposer des applications informatiques optimisées en fonction de critères spécifiques</p>
     </div>
@@ -153,7 +153,7 @@
   
   <div class="slider-container" id="administrerSlider">
     <div class="project-card">
-      <h3 class="project-title"> TP virtualisation </h3>
+      <h3 class="project-title"> Virtualisation </h3>
       <a href="administrer_details.html"><img src="img/virtualisation.jpg" alt="Image TP virtualisation"></a>
       <p>Installer, configurer, mettre à disposition des services et des réseaux</p>
     </div>
@@ -172,7 +172,6 @@
     <button class="prev" onclick="navigateSlider('gerer', -1)">❮</button>
     <button class="next" onclick="navigateSlider('gerer', 1)">❯</button>
   </div>
-  
   <div class="slider-container" id="conduireSlider">
     <div class="project-card">
       <h3 class="project-title">Projet de gestion de paiement d'une banque</h3>
@@ -183,21 +182,22 @@
     <button class="prev" onclick="navigateSlider('conduire', -1)">❮</button>
     <button class="next" onclick="navigateSlider('conduire', 1)">❯</button>
   </div>
-  
+
   <div class="slider-container" id="collaborerSlider">
     <div class="project-card">
       <h3 class="project-title">Projet SAE Wordschain</h3>
       <a href="collaborer_details.html"><img src="img/wordschain.png" alt="Image SAE Wordschain "></a>
       <p>Acquérir, développer et exploiter les aptitudes nécessaires pour travailler efficacement dans une équipe informatique</p>
     </div>
+    <div class="project-card">
+      <h3 class="project-title">ChillZone</h3>
+      <a href="collaborer_details.html"><img src="img/chillzone1.png" alt="Image SAE ChillZone " class="project-img"></a>
+      <p>Acquérir, développer et exploiter les aptitudes nécessaires pour travailler efficacement dans une équipe informatique</p>
+    </div>
     <!-- Ajoutez d'autres project-card pour d'autres projets sous 'Collaborer' -->
     <button class="prev" onclick="navigateSlider('collaborer', -1)">❮</button>
     <button class="next" onclick="navigateSlider('collaborer', 1)">❯</button>
   </div>
-
-
-
-
       <div class="grid">
         <div class="grid__item">
           <h3>Mes domaines d'apprentissage</h3>
@@ -253,7 +253,7 @@
           </div>
           <h3>Compétences en conception graphique</h3>
           <div class="progressbar">
-            <div class="bar" data-width="40">FIGMA <span class="percentage">40%</span></div>
+            <div class="bar" data-width="40">FIGMA <span class="percentage">0%</span></div>
           </div>
           <h3>FRAMEWORKS</h3>
           <div class="progressbar">
@@ -331,7 +331,7 @@
           </ul>
         </div>
         <div class="grid__item">
-          <p>Copyright © 2024 Taha SEFOUDINE. All Rights Reserved.</p>
+          <p>Copyright © 2025 Taha SEFOUDINE. All Rights Reserved.</p>
         </div>
       </div>
     </div>
