feat : mise à jour des données

--- a/blog.html
+++ b/blog.html
@@ -8,21 +8,19 @@
   <link rel="shortcut icon" href="./img/favicon.ico?v=1" type="image/x-icon">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="./css/blog.css">
-
 </head>
 <body>
   <h1>Objectifs Professionnels : </h1>
-  <p>Je m'oriente vers une carrière d'expert en Data Science, avec une attention particulière portée au développement web et un intérêt soutenu pour la cybersécurité. Mon ambition est d'allier mes capacités analytiques en data science à mes compétences techniques en développement web pour élaborer des solutions à la fois innovantes et sécurisées. En intégrant des connaissances pointues en cybersécurité, je souhaite garantir la robustesse et la fiabilité des systèmes d'information.</p>
+  <p>Je m'oriente vers une carrière d'expert en cybersécurité, avec une spécialisation dans l'architecture sécurisée des systèmes d'information et le développement web sécurisé. Mon ambition est d'allier mes compétences analytiques en data science à mes connaissances techniques pour concevoir des solutions innovantes et sécurisées. En intégrant des pratiques avancées en cybersécurité, je souhaite garantir l'intégrité, la confidentialité et la disponibilité des systèmes d'information.</p>
 
-  <p>La data science est au cœur de mes aspirations : déchiffrer des ensembles de données complexes, extraire des informations précieuses et transformer les données brutes en actions stratégiques. La maîtrise des langages de programmation comme Python et R, essentiels dans ce domaine, est pour moi une priorité. Je suis également captivé par l'application de l'apprentissage automatique et des méthodes statistiques avancées pour résoudre des problèmes concrets.</p>
-    
-  <p>Le développement web reste un axe majeur de mon développement professionnel. Créer des applications web réactives et esthétiques grâce à des frameworks modernes et des langages front et back-end me permet de donner vie aux données et d'offrir des plateformes d'analyse puissantes et accessibles.</p>
-    
-  <p>En parallèle, la cybersécurité constitue un domaine que je souhaite explorer davantage. La protection des données étant essentielle, je suis résolu à acquérir une expertise solide dans les pratiques de sécurisation des applications et des systèmes, conscient de l'importance capitale de la prévention des risques informatiques.</p>
+  <p>La data science est au cœur de mes aspirations : analyser des ensembles de données complexes pour détecter des anomalies et des menaces potentielles. La maîtrise des langages de programmation comme Python et R est essentielle pour développer des modèles prédictifs capables d'anticiper les cyberattaques. Je suis également passionné par l'application de l'apprentissage automatique et des méthodes statistiques avancées pour renforcer la sécurité des systèmes.</p>
+
+  <p>Le développement sécurisé reste un axe majeur de mon développement professionnel. Créer des applications web robustes et sécurisées grâce à des frameworks modernes et des langages front et back-end me permet de protéger les données sensibles et d'offrir des plateformes d'analyse sécurisées.</p>
+
+  <p>En parallèle, la cybersécurité constitue un domaine que je souhaite approfondir. La protection des données étant cruciale, je suis déterminé à acquérir une expertise solide dans les pratiques de sécurisation des applications et des systèmes, conscient de l'importance capitale de la prévention des risques informatiques et de la gestion des incidents de sécurité.</p>
 
   <h1>Mission Personnelle : </h1>
-  <p>Animé par la passion de l'innovation en data science et développement web, mon objectif est d’apporter des contributions significatives au secteur technologique. Avec un œil sur la cybersécurité, je souhaite jouer un rôle clé dans la création d’un avenir numérique sûr. J'aspire, si les compétences me le permettent, à fonder ma propre entreprise d'informatique, contribuant ainsi à l'économie de Madagascar.</p>
-
+  <p>Animé par la passion de l'innovation en cybersécurité et développement sécurisé, mon objectif est d’apporter des contributions significatives au secteur technologique. Avec un œil sur la sécurité des données, je souhaite jouer un rôle clé dans la création d’un avenir numérique sûr. J'aspire, si les compétences me le permettent, à fonder ma propre entreprise spécialisée en cybersécurité, contribuant ainsi à l'économie de locale en protégeant les infrastructures numériques.</p>
 
 <div class="return-link">
   <a href="index.html">Retour à l'accueil</a>
