--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Taha SEFOUDINE - Apprenti Developpeur WEB</title>
+  <title>Taha SEFOUDINE - Apprenti </title>
   <meta name="description" content="Portfolio de Taha SEFOUDINE - Développeur Web - freelance indépendant">
   <link rel="shortcut icon" href="./img/favicon.ico?v=1" type="image/x-icon">
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -77,7 +77,7 @@
       <div class="grid">
         <div class="hero__item left">
           <span>Apprenti Data Analyst</span>
-          <h1 class="title">Hello, David CESSY !</h1>
+          <h1 class="title">Hello, dites bonjour à votre votre nouvel Apprenti !</h1>
           <p>Bienvenue sur mon portfolio ! </p>
         </div>
       </div>
@@ -101,8 +101,6 @@
             En dehors de mes études et de mon travail, je pratique le <strong>Judo et la Natation avec le Club de l'UGE et la pétanque en loisir</strong>. 
             Amateur de podcasts mes préférés sont <strong>GDIY et The Diary Of A CEO</strong>.
           </p>
-          <img width="560" height="453" src="./img/timeline.png" alt="Timeline">
-
         </div>
       </div>
     </div>
