--- a/index.html
+++ b/index.html
@@ -93,13 +93,13 @@
           <h2 class="section-title">À-propos</h2>
           <h3>Qui suis-je ?</h3>
           <p>
-            <strong>Étudiant en troisième année de BUT Informatique</strong> 
-            à l'Université Gustave Eiffel, je suis actuellement <strong>Apprenti Data Analyst</strong> 
-            au sein du ministère de l'Économie, des Finances et de la Souveraineté industrielle et numérique - SG/DSCI. 
-            Avec <strong>un an et demi d'expérience</strong>, j'ai suivi un parcours axé sur la <strong>réalisation d’applications</strong>, 
-            couvrant la <strong>conception, le développement et la validation</strong>. 
-            En dehors de mes études et de mon travail, je pratique le <strong>Judo et la Natation avec le Club de l'UGE et la pétanque en loisir</strong>. 
-            Amateur de podcasts mes préférés sont <strong>GDIY et The Diary Of A CEO</strong>.
+            <strong>Élève-ingénieur à Telecom SudParis</strong> au sein de la filière <strong>Modèles et Applications de l'IA (MAIA)</strong>, 
+		je suis actuellement <strong>Apprenti Ingénieur de Recherche</strong> au <strong>Laboratoire de Météorologie Dynamique (LMD) de l'École Polytechnique</strong>.
+		Fort de <strong>trois années d'expérience en apprentissage</strong>, dont deux ans en tant que <strong>Data Analyst</strong> 
+		au sein du ministère de l'Économie, des Finances et de la Souveraineté industrielle et numérique - SG/DSCI, 
+		mon parcours couvre l'intégralité du cycle de la donnée, de la <strong>conception de pipelines ETL à la modélisation complexe</strong>.
+		En dehors de mes études et de mon travail, je pratique le <strong>Judo et la Natation avec le Club de l'UGE et la pétanque en loisir</strong>. 
+		Amateur de podcasts mes préférés sont <strong>GDIY et The Diary Of A CEO</strong>.
           </p>
         </div>
       </div>
